Fixed delete function, added editing function

--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -13,15 +13,16 @@
         <div th:replace="fragments/navbar :: navbar">...</div>
 
         <div style="width:800px; margin:0 auto;">
+
             <table>
                 <tr>
                     <th>Klikkaa otsikkoa editoidaksesi</th>
                     <th></th>
                 </tr>
 
-                <tr th:each="article : ${news}">
-                    <td><a th:href="@{/edit/{article}(article=${article.id})}" th:text="${article.title}">otsikko</a></td>
-                    <td><form th:action="@{/news/{article}(article=${article.id})}" th:method="DELETE"><input type="submit" value="Delete"/></form></td>
+                <tr th:each="newsArticle : ${news}">
+                    <td><a th:href="@{/edit/{newsArticle}(newsArticle=${newsArticle.id})}" th:text="${newsArticle.title}">otsikko</a></td>
+                    <td><form th:action="@{/news/{newsArticle}(newsArticle=${newsArticle.id})}" th:method="DELETE"><input type="submit" value="Delete"/></form></td>
                 </tr>
             </table>
 
@@ -31,18 +32,19 @@
                 </font>    
             </div>
 
-            <h2>Lisää uutinen:</h2>
+            <h2>Muokkaa uutista: <span th:text="${article.title}"></span></h2>
 
-            <form action="/news/new" method="POST" enctype="multipart/form-data">
+            <form th:action="@{/edit/{id}(id=${article.id})}"  method="POST" enctype="multipart/form-data">
                 <br></br>
-                Otsikko:<input type="text" name="title"/>
+                Otsikko:<input type="text" name="title" th:value="${article.title}"/>
                 <br></br>
-                Kirjoittaja (lisää useampia pilkulla eroteltuna):<input type="text" name="authorNames"/>
+                Kirjoittaja (lisää useampia pilkulla eroteltuna):
+                <input type="text" name="authorNames"th:value="${authors}"/>
                 <br></br>
-                Ingressi:<input type="text" name="ingress"/>
+                Ingressi:<input type="text" name="ingress"th:value="${article.ingress}"/>
                 <br></br>
                 Sisältö:
-                <textarea name="content" rows="10" cols="30">
+                <textarea name="content" rows="10" cols="30"th:value="${article.content}" th:field="${article.content}">
 
 
 
@@ -54,6 +56,10 @@
                 <br></br>
                 Kategoria:
                 <select name="categoryNames" size="6" multiple>
+                    <option th:each="category : ${article.categories}" 
+                            th:selected="true"
+                            th:value="${category.name}"
+                            th:text="${category.name}">Category name</option>
                     <option value="Uudet">Uudet</option>
                     <option value="Vanhat">Vanhat</option>
                     <option value="Hyvät">Hyvät</option>
@@ -63,11 +69,15 @@
                 </select>
                 <br></br>
                 Lisää kuva:    <input type="file" name="picture"/>
+                <div th:if="${article != null}">
+                    Nykyinen kuva:
+                    <img th:src="@{/pictures/{id}(id=${article.id})}"/>
+                </div>
                 <br></br>
-                <input type="submit" value="Julkaise"/>
+                <input type="submit" value="Muokkaa"/>
             </form>
-            <script type="text/javascript"
-            src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         </div>
+        <script type="text/javascript"
+        src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
     </body>
 </html>
