--- a/src/main/resources/templates/filtered.html
+++ b/src/main/resources/templates/filtered.html
@@ -14,7 +14,7 @@
         <div style="width:800px; margin:0 auto;">
 
             <h1>Geneeriset Uutiset</h1>
-
+            <h2><span th:text="${filteringTitle}"/></h2>
             <table>
                 <tr>
                     <th></th>
