--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -21,6 +21,7 @@
                         <li><a th:inline="text" href="/news/category/Huonot">Huonot</a></li>
                         <li><a th:inline="text" href="/news/category/Jännät">Jännät</a></li>
                         <li><a th:inline="text" href="/news/category/Tylsät">Tylsät</a></li>
+                        <li><a th:align="right" th:href="@{/control}">Hallintapaneeli</a></li>
                     </ul>
                 </div>
             </div>
