--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,11 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>Geneeriset Uutiset</title>
-
-        <link rel="stylesheet" type="text/css"
-              th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
-        <link rel="stylesheet" th:href="@{/css/main.css}"
-              href="../../css/main.css" />
+        <!-- BOOTSTRAP -->
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+            <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+            <!--        <link rel="stylesheet" type="text/css"
+                          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+                    <link rel="stylesheet" th:href="@{/css/main.css}"
+                          href="../../css/main.css" />-->
     </head>
 
     <body>
